force-app/main/default/objects/PriceConfigurationSet__c/PriceConfigurationSet__c.object-meta.xml
<CustomObject>
    <label>Price Configuration Set</label>
    <nameField>
        <displayFormat>PCS-{00000000}</displayFormat>
        <label>Price Configuration Set Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Configuration Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>