force-app/main/default/objects/PriceConfigurationSet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Configuration Sets</relationshipLabel>
    <relationshipName>Price_Configuration_Sets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>