force-app/main/default/objects/PriceConfigurationSet__c/fields/AssortmentCocoaCount__c.field-meta.xml
<CustomField>
    <fullName>AssortmentCocoaCount__c</fullName>
    <label>Assortment Cocoa Count</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>