force-app/main/default/objects/PriceConfigurationSet__c/fields/AssortmentCocoaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>AssortmentCocoaDiscountPct__c</fullName>
    <label>Assortment Cocoa Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>