force-app/main/default/objects/PriceConfigurationSet__c/fields/AssortmentOtherCount__c.field-meta.xml
<CustomField>
    <fullName>AssortmentOtherCount__c</fullName>
    <label>Assortment Other Count</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>