force-app/main/default/objects/PriceConfigurationSet__c/fields/AssortmentOtherDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>AssortmentOtherDiscountPct__c</fullName>
    <label>Assortment Other Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>