force-app/main/default/objects/PriceConfigurationSet__c/fields/AssortmentRoastCoffeeCount__c.field-meta.xml
<CustomField>
    <fullName>AssortmentRoastCoffeeCount__c</fullName>
    <label>Assortment Roast Coffee Count</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>