force-app/main/default/objects/PriceConfigurationSet__c/fields/AssortmentRoastCoffeeDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>AssortmentRoastCoffeeDiscountPct__c</fullName>
    <label>Assortment Roast Coffee Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>