force-app/main/default/objects/PriceConfigurationSet__c/fields/AssortmentTeaCount__c.field-meta.xml
<CustomField>
    <fullName>AssortmentTeaCount__c</fullName>
    <label>Assortment Tea Count</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>