force-app/main/default/objects/PriceConfigurationSet__c/fields/AssortmentTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>AssortmentTeaDiscountPct__c</fullName>
    <label>Assortment Tea Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>