force-app/main/default/objects/PriceConfigurationSet__c/fields/BaseCocaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>BaseCocaDiscountPct__c</fullName>
    <label>Base Discount Cocoa %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>