force-app/main/default/objects/PriceConfigurationSet__c/fields/BaseOtherArticlesDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>BaseOtherArticlesDiscountPct__c</fullName>
    <label>Base Discount Other %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>