force-app/main/default/objects/PriceConfigurationSet__c/fields/BaseRoastCoffeeDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>BaseRoastCoffeeDiscountPct__c</fullName>
    <label>Base Discount Roast Coffee %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>