force-app/main/default/objects/PriceConfigurationSet__c/fields/BaseTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>BaseTeaDiscountPct__c</fullName>
    <label>Base Discount Tea %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>