force-app/main/default/objects/PriceConfigurationSet__c/fields/BrandVisibilityLocationPct__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityLocationPct__c</fullName>
    <label>Brand Visibility – Location %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>