force-app/main/default/objects/PriceConfigurationSet__c/fields/BrandVisibilityMenu__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityMenu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Visibility – Menu</label>
    <type>Checkbox</type>
</CustomField>