force-app/main/default/objects/PriceConfigurationSet__c/fields/BrandVisibilityMenuPct__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityMenuPct__c</fullName>
    <label>Brand Visibility – Menu %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>