force-app/main/default/objects/PriceConfigurationSet__c/fields/BrandVisibilityTabelPct__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityTabelPct__c</fullName>
    <label>Brand Visibility – Table %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>