force-app/main/default/objects/PriceConfigurationSet__c/fields/BrandVisibilityTable__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityTable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Visibility – Table</label>
    <type>Checkbox</type>
</CustomField>