force-app/main/default/objects/PriceConfigurationSet__c/fields/CashDiscount__c.field-meta.xml
<CustomField>
    <fullName>CashDiscount__c</fullName>
    <label>Cash Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>