force-app/main/default/objects/PriceConfigurationSet__c/fields/ConditionSetStartDate__c.field-meta.xml
<CustomField>
    <fullName>ConditionSetStartDate__c</fullName>
    <label>Condition Set Start Date</label>
    <type>Date</type>
</CustomField>