force-app/main/default/objects/PriceConfigurationSet__c/fields/GrowthPercent__c.field-meta.xml
<CustomField>
    <fullName>GrowthPercent__c</fullName>
    <label>Growth (Percent)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-5%</fullName>
            </value>
            <value>
                <fullName>5-10%</fullName>
            </value>
            <value>
                <fullName>10-15%</fullName>
            </value>
            <value>
                <fullName>&gt;15%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>