force-app/main/default/objects/PriceConfigurationSet__c/fields/GrowthRevenue__c.field-meta.xml
<CustomField>
    <fullName>GrowthRevenue__c</fullName>
    <label>Growth (Revenue)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Below 2.000€</fullName>
            </value>
            <value>
                <fullName>Below 10.000€</fullName>
            </value>
            <value>
                <fullName>Above 10.000€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>