force-app/main/default/objects/PriceConfigurationSet__c/fields/HeadOfConditionChain__c.field-meta.xml
<CustomField>
    <fullName>HeadOfConditionChain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Condition Chain</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Configuration Sets (Head of Chain Account)</relationshipLabel>
    <relationshipName>Price_Configuration_Sets1</relationshipName>
    <type>Lookup</type>
</CustomField>