force-app/main/default/objects/PriceConfigurationSet__c/fields/HeadOfConditionChainIndustry__c.field-meta.xml
<CustomField>
    <fullName>HeadOfConditionChainIndustry__c</fullName>
    <formula>HeadOfConditionChain__r.Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head of Condition Chain Industry</label>
    <type>Text</type>
</CustomField>