force-app/main/default/objects/PriceConfigurationSet__c/fields/IndexDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>IndexDiscountPct__c</fullName>
    <label>Index Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>