force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedBaseCocaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InheritedBaseCocaDiscountPct__c</fullName>
    <label>Inherited Base Discount Cocoa %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>