force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedBaseOtherArticlesDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InheritedBaseOtherArticlesDiscountPct__c</fullName>
    <label>Inherited Base Discount Other Articles %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>