force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedBaseRoastCoffeeDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InheritedBaseRoastCoffeeDiscountPct__c</fullName>
    <label>Inherited Base Discount Roast Coffee %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>