force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedBaseTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InheritedBaseTeaDiscountPct__c</fullName>
    <label>Inherited Base Discount Tea %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>