force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedIndexDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InheritedIndexDiscountPct__c</fullName>
    <label>Inherited Index Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>