force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedVolCocoaQty__c.field-meta.xml
<CustomField>
    <fullName>InheritedVolCocoaQty__c</fullName>
    <inlineHelpText>Bei Chain-Members: vom Head geerbte konditionsrelevante Volumenmenge Trinkschokolade (Basis fuer Vol-Discount-%).</inlineHelpText>
    <label>Inh. Vol. Cocoa Qty (Kond.)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>