force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedVolOtherQty__c.field-meta.xml
<CustomField>
    <fullName>InheritedVolOtherQty__c</fullName>
    <inlineHelpText>Bei Chain-Members: vom Head geerbte konditionsrelevante Volumenmenge Sonstiges (Basis fuer Vol-Discount-%).</inlineHelpText>
    <label>Inh. Vol. Other Qty (Kond.)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>