force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedVolRoastCoffeeQty__c.field-meta.xml
<CustomField>
    <fullName>InheritedVolRoastCoffeeQty__c</fullName>
    <inlineHelpText>Bei Chain-Members: vom Head geerbte konditionsrelevante Volumenmenge Roestkaffee (Basis fuer Vol-Discount-%).</inlineHelpText>
    <label>Inh. Vol. Roast Coffee Qty (Kond.)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>