force-app/main/default/objects/PriceConfigurationSet__c/fields/InheritedVolTeaQty__c.field-meta.xml
<CustomField>
    <fullName>InheritedVolTeaQty__c</fullName>
    <inlineHelpText>Bei Chain-Members: vom Head geerbte konditionsrelevante Volumenmenge Tee (Basis fuer Vol-Discount-%).</inlineHelpText>
    <label>Inh. Vol. Tea Qty (Kond.)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>