force-app/main/default/objects/PriceConfigurationSet__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Price Configuration Sets</relationshipLabel>
    <relationshipName>Price_Configuration_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>