force-app/main/default/objects/PriceConfigurationSet__c/fields/OrderChannelDigital__c.field-meta.xml
<CustomField>
    <fullName>OrderChannelDigital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Channel Digital</label>
    <type>Checkbox</type>
</CustomField>