force-app/main/default/objects/PriceConfigurationSet__c/fields/OrderChannelDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>OrderChannelDiscountPct__c</fullName>
    <label>Order Channel Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>