force-app/main/default/objects/PriceConfigurationSet__c/fields/OtherAdditionalAgreementsDetails__c.field-meta.xml
<CustomField>
    <fullName>OtherAdditionalAgreementsDetails__c</fullName>
    <label>Other Additional Agreements Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>