force-app/main/default/objects/PriceConfigurationSet__c/fields/OtherAdditionalAgreementsSet__c.field-meta.xml
<CustomField>
    <fullName>OtherAdditionalAgreementsSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Additional Agreements Set</label>
    <type>Checkbox</type>
</CustomField>