force-app/main/default/objects/PriceConfigurationSet__c/fields/ParentConfigurationSet__c.field-meta.xml
<CustomField>
    <fullName>ParentConfigurationSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Configuration Set</label>
    <referenceTo>PriceConfigurationSet__c</referenceTo>
    <relationshipLabel>Child Cofiguration Sets</relationshipLabel>
    <relationshipName>PriceConfigurationSets</relationshipName>
    <type>Lookup</type>
</CustomField>