force-app/main/default/objects/PriceConfigurationSet__c/fields/ParentType__c.field-meta.xml
<CustomField>
    <fullName>ParentType__c</fullName>
    <label>Parent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kette</fullName>
            </value>
            <value>
                <fullName>Einkaufsgesellschaft KANN</fullName>
            </value>
            <value>
                <fullName>Einkaufsgesellschaft MUSS</fullName>
                <isActive>false</isActive>
                <label>Einkaufsgesellschaft MUSS</label>
            </value>
            <value>
                <fullName>KANN</fullName>
                <isActive>false</isActive>
                <label>KANN</label>
            </value>
            <value>
                <fullName>MUSS</fullName>
                <isActive>false</isActive>
                <label>MUSS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>