force-app/main/default/objects/PriceConfigurationSet__c/fields/ProfessionalAdjustmentRequested__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalAdjustmentRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional Adjustment Requested</label>
    <type>Checkbox</type>
</CustomField>