force-app/main/default/objects/PriceConfigurationSet__c/fields/QualityCheckAgreed__c.field-meta.xml
<CustomField>
    <fullName>QualityCheckAgreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Check Agreed</label>
    <type>Checkbox</type>
</CustomField>