force-app/main/default/objects/PriceConfigurationSet__c/fields/QualityCheckFirstVisitDate__c.field-meta.xml
<CustomField>
    <fullName>QualityCheckFirstVisitDate__c</fullName>
    <label>Quality Check First Visit Date</label>
    <type>Date</type>
</CustomField>