force-app/main/default/objects/PriceConfigurationSet__c/fields/RefundType__c.field-meta.xml
<CustomField>
    <fullName>RefundType__c</fullName>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Absatzbezogen</fullName>
            </value>
            <value>
                <fullName>Umsatzbezogen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>