force-app/main/default/objects/PriceConfigurationSet__c/fields/RentalDetails__c.field-meta.xml
<CustomField>
    <fullName>RentalDetails__c</fullName>
    <label>Leihstellung Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>