force-app/main/default/objects/PriceConfigurationSet__c/fields/RentalOffered__c.field-meta.xml
<CustomField>
    <fullName>RentalOffered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Offered</label>
    <type>Checkbox</type>
</CustomField>