force-app/main/default/objects/PriceConfigurationSet__c/fields/SugarPrintDetails__c.field-meta.xml
<CustomField>
    <fullName>SugarPrintDetails__c</fullName>
    <label>Sugar Print Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>