force-app/main/default/objects/PriceConfigurationSet__c/fields/SugarPrintOffered__c.field-meta.xml
<CustomField>
    <fullName>SugarPrintOffered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sugar Print Offered</label>
    <type>Checkbox</type>
</CustomField>