force-app/main/default/objects/PriceConfigurationSet__c/fields/VolumeCocoaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>VolumeCocoaDiscountPct__c</fullName>
    <label>Volume Cocoa Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>