force-app/main/default/objects/PriceConfigurationSet__c/fields/VolumeCocoaQty__c.field-meta.xml
<CustomField>
    <fullName>VolumeCocoaQty__c</fullName>
    <inlineHelpText>Bei Top-Account: konditionsrelevante Eigen-Volumenmenge Trinkschokolade. Bei Chain-Member: nur statistischer Eigenwert (kein eigener Rabatt).</inlineHelpText>
    <label>Volume Cocoa Qty (Self)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>