force-app/main/default/objects/PriceConfigurationSet__c/fields/VolumeCoffeeDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>VolumeCoffeeDiscountPct__c</fullName>
    <label>Volume Roast Coffee Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>