force-app/main/default/objects/PriceConfigurationSet__c/fields/VolumeOtherDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>VolumeOtherDiscountPct__c</fullName>
    <label>Volume Other Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>