force-app/main/default/objects/PriceConfigurationSet__c/fields/VolumeOtherQty__c.field-meta.xml
<CustomField>
    <fullName>VolumeOtherQty__c</fullName>
    <inlineHelpText>Bei Top-Account: konditionsrelevante Eigen-Volumenmenge Sonstiges. Bei Chain-Member: nur statistischer Eigenwert (kein eigener Rabatt).</inlineHelpText>
    <label>Volume Other Qty (Self)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>