force-app/main/default/objects/PriceConfigurationSet__c/fields/VolumeRoastCoffeeQty__c.field-meta.xml
<CustomField>
    <fullName>VolumeRoastCoffeeQty__c</fullName>
    <inlineHelpText>Bei Top-Account: konditionsrelevante Eigen-Volumenmenge Roestkaffee. Bei Chain-Member: nur statistischer Eigenwert (kein eigener Rabatt).</inlineHelpText>
    <label>Volume Roast Coffee Qty (Self)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>