force-app/main/default/objects/PriceConfigurationSet__c/fields/VolumeTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>VolumeTeaDiscountPct__c</fullName>
    <label>Volume Tea Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>