force-app/main/default/objects/PriceConfigurationSet__c/fields/VolumeTeaQty__c.field-meta.xml
<CustomField>
    <fullName>VolumeTeaQty__c</fullName>
    <inlineHelpText>Bei Top-Account: konditionsrelevante Eigen-Volumenmenge Tee. Bei Chain-Member: nur statistischer Eigenwert (kein eigener Rabatt).</inlineHelpText>
    <label>Volume Tea Qty (Self)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>