force-app/main/default/objects/PriceConfigurationSet__c/fields/WKZCoffeeOneTimeRuntimeMonths__c.field-meta.xml
<CustomField>
    <fullName>WKZCoffeeOneTimeRuntimeMonths__c</fullName>
    <label>WKZ Coffee One-Time - Runtime in Months</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>