force-app/main/default/objects/PriceConfigurationSet__c/fields/WKZCoffeeOneTimeTotalRuntime__c.field-meta.xml
<CustomField>
    <fullName>WKZCoffeeOneTimeTotalRuntime__c</fullName>
    <label>WKZ Coffee - One Time - Total Runtime</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>