force-app/main/default/objects/PriceConfigurationSet__c/fields/WKZTeaOneTimeBonus__c.field-meta.xml
<CustomField>
    <fullName>WKZTeaOneTimeBonus__c</fullName>
    <label>WKZ Tea One-Time - Bonus</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>