force-app/main/default/objects/PriceConfigurationSet__c/fields/WKZTeaOneTimeRuntimeMonths__c.field-meta.xml
<CustomField>
    <fullName>WKZTeaOneTimeRuntimeMonths__c</fullName>
    <label>WKZ Tee Einm. - Laufzeit (in Monaten)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>