force-app/main/default/objects/PriceConfigurationSet__c/fields/WKZTeaOneTimeTotalRuntime__c.field-meta.xml
<CustomField>
    <fullName>WKZTeaOneTimeTotalRuntime__c</fullName>
    <label>WKZ Tea - One Time - Total Runtime</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>